src/test/deca/syntax/invalid/thisIsNotLvalue.deca
// Description:
//    this is not a lvalue
//
// Resultats:
//    Syntaxe Error
//
// Historique:
//    cree le 08/01/2023

class a {
	int a;
	void setA(a){
		this = a;
	}
}
